hphp/hack/test/typecheck/variadic_args5.php.exp
File "variadic_args5.php", line 13, characters 7-8:
Class C2 does not correctly implement all required methods  (Typing[4043])
File "variadic_args5.php", line 13, characters 18-19:
Some methods are incompatible with those declared in type C1
Read the following to see why:
File "variadic_args5.php", line 14, characters 19-22:
Member meth has the wrong type
File "variadic_args5.php", line 14, characters 19-22:
Variadic arguments: ...-style is not a subtype of ...$args
File "variadic_args5.php", line 10, characters 19-22:
Because of this definition
